# uav-2t-mvem-rl

./: .coverage  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
models/: evaluations.npz
runs/ddpg/DDPG_1/: events.out.tfevents.1759234215.LAPTOP-1THNST51.23064.0
runs/td3/TD3_1/: events.out.tfevents.1759239889.LAPTOP-1THNST51.4816.0
src/engine_rl/agents/: ddpg_train.py  eval_policies.py  td3_train.py
src/engine_rl/envs/: mvem2t_env.py  params.py
src/engine_rl/examples/: smoke.py
src/engine_rl/metrics/: scoring.py
tests/: test_env_smoke.py  test_intake_film.py  test_params.py
